--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
+    "peer": "^1.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
