--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "peer": "^1.0.2",
+    "peerjs": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
