--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "peerjs": "1.4.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-new-window": "^1.0.1",
     "react-toastify": "^10.0.5",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5"
